adjusted modal dialog margin so that it isn't hidden behind the fixed page header

--- a/tornado-app/static/style_new.css
+++ b/tornado-app/static/style_new.css
@@ -304,7 +304,7 @@ div.processing {
     width: 50%;
 //    overflow: auto;
     position: fixed;
-    margin-top: 20px;
+    margin-top: 100px; // large top margin to push the modal below the fixed page header
     z-index:2;
 }
 .mdl-dialog__content {
